@@ -7,3 +7,5 @@ decryptFailed=Decrypt failed, unknown error.
 decryptFailedPassword=Decrypt failed. The password is not good.
 passwordDialogEnterPrivateKey=Enter your private key :
 youMustEnterPassword=You must enter a password !
+choosePublicKeyTitle=FireGPG - public key
+choosePublicKeyDescription=Choose the public key :
