@@ -7,3 +7,5 @@ decryptFailed=Erreur inconnue, le déchiffrement a échoué.
 decryptFailedPassword=Le déchiffrement a échoué car le mot de passe incorrect.
 passwordDialogEnterPrivateKey=Entrez votre clé privée :
 youMustEnterPassword=Vous devez entrer un mot de passe !
+choosePublicKeyTitle=FireGPG - clé publique
+choosePublicKeyDescription=Choisissez la clé publique :
