@@ -1,3 +1,3 @@
-<!ENTITY title "FireGPG - Mot de passe de la clé privée">
+<!ENTITY title "FireGPG - Mot de passe">
 <!ENTITY description "Entrez le mot de passe de votre clé privée :">
 <!ENTITY save-password-checkbox "Mémoriser le mot de passe pour la session">
