@@ -1,4 +1,8 @@
-2007-03-04  Maximilien Cuony
+2007-03-06  Achraf cherti
+	* list dialog (list.xul, list.js, list*dtd) implemented.
+	* selectPublicKey() implemented (it show a dialog with all keys).
+
+2007-03-05  Maximilien Cuony
 	* Fix an error in getPrivateKeyPassword()
 	* Cgpg class in now finish !
 	* Implementation of getSelfKey(), for get the default key !
